<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/participantes"/>

            <RadioGroup
                android:id="@+id/participantesRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_dos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dos"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton
                    android:id="@+id/radio_tres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tres"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton
                    android:id="@+id/radio_cuatro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cuatro"
                    android:onClick="onRadioButtonClicked"/>

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/esPublica"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_publica"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/publica"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton
                    android:id="@+id/radio_privada"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/privada"
                    android:onClick="onRadioButtonClicked"/>
            </RadioGroup>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/elegirModoJuego"/>
            <Spinner
                android:id="@+id/modo_juego_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eleccionCartasEspeciales"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox android:id="@+id/checkbox_rayosX"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activarRayosX" />
                <CheckBox android:id="@+id/checkbox_intercambio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activarIntercambio" />
                <CheckBox android:id="@+id/checkbox_x2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activarx2" />

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activarReglasEspeciales"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox android:id="@+id/checkbox_encadenar_2_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activarEncadenar_2_4" />
                <CheckBox android:id="@+id/checkbox_redirigir_2_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activarRedirigir_2_4" />
                <CheckBox android:id="@+id/checkbox_jugar_varias_cartas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activarJugar_varias_cartas" />
                <CheckBox android:id="@+id/checkbox_penalizacion_4_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activarPenalizacion_4_color" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/confirmarSalaButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#2EC322"
        android:text="@string/confirmarSala"
        android:textColor="@color/white"
        app:rippleColor="#1A2351" />

</LinearLayout>