<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/numParticipantesTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/participantesFiltro"/>

            <RadioGroup
                android:id="@+id/participantesRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/buscarSala_radio_dos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dos"/>
                <RadioButton
                    android:id="@+id/buscarSala_radio_tres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tres"/>
                <RadioButton
                    android:id="@+id/buscarSala_radio_cuatro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cuatro"/>
                <RadioButton
                    android:id="@+id/buscarSala_radio_cualquiera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cualquiera"/>

            </RadioGroup>


            <TextView
                android:id="@+id/modoJuegoTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/modoJuegoFiltro"/>
            <Spinner
                android:id="@+id/modo_juego_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>


            <ToggleButton
                android:id="@+id/filtrosAdicionalesToggleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textOn="Quitar filtros adicionales"
                android:textOff="Seleccionar filtros adicionales" />

            <LinearLayout
                android:id="@+id/filtrosAdicionalesLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/cartasEspecialesTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/eleccionCartasEspeciales"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox android:id="@+id/buscarSala_checkbox_rayosX"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/activarRayosX" />
                    <CheckBox android:id="@+id/buscarSala_checkbox_intercambio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/activarIntercambio" />
                    <CheckBox android:id="@+id/buscarSala_checkbox_x2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/activarx2" />

                </LinearLayout>


                <TextView
                    android:id="@+id/reglasAdicionalesTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activarReglasEspeciales"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <CheckBox android:id="@+id/buscarSala_checkbox_encadenar_2_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/activarEncadenar_2_4" />
                    <CheckBox android:id="@+id/buscarSala_checkbox_redirigir_2_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/activarRedirigir_2_4" />
                    <CheckBox android:id="@+id/buscarSala_checkbox_jugar_varias_cartas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/activarJugar_varias_cartas" />
                    <CheckBox android:id="@+id/buscarSala_checkbox_penalizacion_4_color"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/activarPenalizacion_4_color" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>