<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="414dp"
            android:layout_height="13dp"
            android:text="@string/mensajeConfirmar">

        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/codigo"/>

        <EditText
            android:id="@+id/codigoConfirmacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:maxLength="6"/>
    </LinearLayout>

    <Button
        android:id="@+id/confirmCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#2EC322"
        android:text="@string/register"
        android:textColor="@color/white"
        app:rippleColor="#1A2351" />

</LinearLayout>